--- a/views/Index/Index.ejs
+++ b/views/Index/Index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
-<link rel="stylesheet" href="/public/css/indexStyles/main.css">
-<link rel="stylesheet" href="/public/css/indexStyles/responsive.css">
+<link rel="stylesheet" href="/css/indexStyles/main.css">
+<link rel="stylesheet" href="/css/indexStyles/responsive.css">
 <%- include('./partials/head') %>
 <body>
     <!-- Header Section -->
@@ -20,7 +20,7 @@
     <%- include('./partials/products') %>
 
     <!-- Testimonials Section -->
-    <%- include('./partials/testimonials') %>
+    <%-/* include('./partials/testimonials') */%>
 
     <!-- CTA Section -->
     <%- include('./partials/cta') %>
