--- a/views/Index/partials/testimonials.ejs
+++ b/views/Index/partials/testimonials.ejs
@@ -1,4 +1,4 @@
-<section class="testimonials">
+<!-- <section class="testimonials">
     <div class="testimonials-container">
         <h2 class="section-title">Lo que dicen nuestros clientes</h2>
         <% testimonialsList.forEach(function(testimonial) { %>
@@ -8,4 +8,4 @@
             </div>
         <% }); %>
     </div>
-</section>
+</section> -->
