--- a/views/Administrador/listaUsuario.ejs
+++ b/views/Administrador/listaUsuario.ejs
@@ -1,31 +1,44 @@
-
-
 <div class="alert alert-danger d-none" role="alert" id="notificacion"></div>
 
 <div class="container-fluid my-4">
+  <div class="mb-3 text-end">
+    <a href="/ruta/crear" class="btn btn-success">Agregar Campesino</a>
+  </div>
+
   <div class="row table-responsive">
-    <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
-      <table class="table" id="table">
+    <div class="col-12">
+      <table class="table table-striped table-bordered table-hover align-middle text-center" id="table">
         <thead class="table-light">
-          <tr class="">
+          <tr>
             <th scope="col">#</th>
             <th scope="col">Nombres</th>
             <th scope="col">Apellidos</th>
             <th scope="col">Email</th>
+            <th scope="col">Celular</th>
+            <th scope="col">Mercadillo</th>
             <th scope="col">Acción</th>
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <% usuarios.forEach((vendedor)=>{ %>
-            <td><%= vendedor.Id %></td>
-            <td><%= vendedor.Nombres %></td>
-            <td><%= vendedor.Apellidos %></td>
-            <td><%= vendedor.Email %></td>
-            <td>
-              <a href="#" class="btn-eliminar-usuario">Eliminar</a>
-            </td>
-          </tr>
+          <% usuarios.forEach((vendedor) => { %>
+            <tr>
+              <td><%= vendedor.Id %></td>
+              <td><%= vendedor.Nombres %></td>
+              <td><%= vendedor.Apellidos %></td>
+              <td><%= vendedor.Email %></td>
+              <td><%= vendedor.Celular %></td>
+              <td><%= vendedor.nombreMercadillo %></td>
+              <td>
+                <a href="#" class="btn btn-outline-danger btn-sm btn-eliminar-usuario" role="button">
+                  <i class="bi bi-trash"></i>
+                </a>
+                <% if (vendedor.Estado) { %>
+                  <a href="#" class="btn btn-warning btn-sm btn-toggle-estado" data-estado="activo">Desactivar</a>
+                <% } else { %>
+                  <a href="#" class="btn btn-success btn-sm btn-toggle-estado" data-estado="inactivo">Activar</a>
+                <% } %>
+              </td>
+            </tr>
           <% }); %>
         </tbody>
       </table>
@@ -34,40 +47,23 @@
 </div>
 
 <!-- Modal -->
-<div
-  class="modal fade"
-  id="eliminarModal"
-  data-bs-backdrop="static"
-  data-bs-keyboard="false"
-  tabindex="-1"
-  aria-labelledby="eliminarModalLabel"
-  aria-hidden="true"
->
+<div class="modal fade" id="eliminarModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="eliminarModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="modal"
-          aria-label="Close"
-        ></button>
+        <h1 class="modal-title fs-5" id="eliminarModalLabel"></h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
       </div>
       <div class="modal-body">
-        <h1 class="modal-title fs-5" id="eliminarModalLabel"></h1>
+        ¿Estás seguro de eliminar este campesino?
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary btnModalCerrar" data-bs-dismiss="modal">
-          Cerrar
-        </button>
-        <button type="button" class="btn btn-primary btnModalEliminar">
-          Eliminar
-        </button>
+        <button type="button" class="btn btn-secondary btnModalCerrar" data-bs-dismiss="modal">Cancelar</button>
+        <button type="button" class="btn btn-primary btnModalEliminar">Eliminar</button>
       </div>
     </div>
   </div>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
 <script src="/js/vendedorAdmin.js" type="module"></script>
