Modified Index landingpage, and update model an any functions

--- a/views/Index/partials/about.ejs
+++ b/views/Index/partials/about.ejs
@@ -8,7 +8,7 @@
             <p>Cada producto que encuentras en nuestro mercadillo tiene una historia, un rostro y un compromiso con la tierra y las tradiciones agrícolas de nuestros campesinos.</p>
         </div>
         <div class="about-image">
-            <img src="/images/mercadillo.jpg" alt="Mercadillo Campesino" />
+            <img src="/img/ImagesIndex/475129802_1018725800288242_3512639955458263255_n.jpg" alt="Mercadillo Campesino" />
         </div>
     </div>
 </section>
