--- a/public/css/indexStyles/main.css
+++ b/public/css/indexStyles/main.css
@@ -70,7 +70,7 @@ nav ul li a:hover {
 
 /* Hero Section */
 .hero {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/images/hero-bg.jpg');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/img//ImagesIndex/WallperProducts.jpg');
     background-size: cover;
     background-position: center;
     height: 80vh;
