Modified Login, and create new Login Modal

--- a/views/Index/Index.ejs
+++ b/views/Index/Index.ejs
@@ -34,18 +34,18 @@
 
                                 <!-- Products Section -->
                                 <%- include('./partials/products') %>
+                                    <!-- Login Modal -->
+                                    <%- include('../login') %>
+                                        <!-- Testimonials Section -->
+                                        <%- /* include('./partials/testimonials') */%>
 
-                                    <!-- Testimonials Section -->
-                                    <%- /* include('./partials/testimonials') */%>
+                                            <!-- CTA Section -->
+                                            <%- include('./partials/cta') %>
 
-                                        <!-- CTA Section -->
-                                        <%- include('./partials/cta') %>
+                                                <!-- Footer -->
+                                                <%- include('./partials/footer') %>
 
-                                            <!-- Footer -->
-                                            <%- include('./partials/footer') %>
-
-                                                <!-- Scripts -->
-                                                <script src="/public/js/main.js"></script>
+                                                    <!-- Scripts -->
+                                                    <script src="/js/loginModal.js"></script>
+                                                    <script src="/js/main.js"></script>
     </body>
-
-</html>
