--- a/views/Index/partials/header.ejs
+++ b/views/Index/partials/header.ejs
@@ -12,5 +12,10 @@
                 <li><a href="#contacto">Contacto</a></li>
             </ul>
         </nav>
+        <div class="auth-buttons">
+            <a href="/MercadilloBucaramanga/Login" class="login-btn">
+                <i class="fas fa-user"></i> Iniciar Sesión
+            </a>
+        </div>
     </div>
 </header>
