Fix Module Login auth

--- a/views/Index/Index.ejs
+++ b/views/Index/Index.ejs
@@ -47,5 +47,6 @@
 
                                                     <!-- Scripts -->
                                                     <script src="/js/loginModal.js"></script>
+                                                    <script src="/js/login.js"></script>
                                                     <script src="/js/main.js"></script>
     </body>
