--- a/views/Index/partials/head.ejs
+++ b/views/Index/partials/head.ejs
@@ -4,5 +4,6 @@
     <title>Mercadillo Campesino | Productos frescos del campo a tu mesa</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/responsive.css">
 </head>
