--- a/views/Vendedor/vendedor.ejs
+++ b/views/Vendedor/vendedor.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <%- include('../includes/header') -%>
+    <%- include('../index/partials/head') -%>
   </head>
   <body>
-    <%- include('../includes/nav') -%>
+    <%- include('../index/partials/header') %>
     <div class="container-fluid">
       <div class="row">
         <%- include('../includes/sidebarVendedor') %>
@@ -15,6 +15,6 @@
       </div>
     </div>
     
-    <%- include('../includes/footer') -%>
+    <%- include('../index/partials/footer') -%>
   </body>
 </html>
