--- a/views/Index/Index.ejs
+++ b/views/Index/Index.ejs
@@ -48,5 +48,5 @@
                                                     <!-- Scripts -->
                                                     <script src="/js/loginModal.js"></script>
                                                     <script src="/js/login.js"></script>
-                                                   
+                                                   <script src="/js/dropDownUserLogged.js"></script>
     </body>
